<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginBottom="50dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_converter"
            android:textColor="@color/teal_700"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mainLayou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/topLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/amountText"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/inputAmount"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:background="#ffffff"
                android:ems="10"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/fromText"
                android:textColor="@color/teal_700"

                />

            <Spinner
                android:id="@+id/dropdownFrom"
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:dropDownWidth="wrap_content"
                android:entries="@array/currencies"
                android:gravity="center|center_horizontal|center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"

                android:layout_height="wrap_content"
                android:text="@string/toText"
                android:textColor="@color/teal_700" />

            <Spinner
                android:id="@+id/dropdownTo"
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:entries="@array/currencies" />


        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:onClick="Convert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="convert"
                android:layout_centerInParent="true" />
        </RelativeLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="100dp"

            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/purple_500"
                android:textSize="25sp" />
        </LinearLayout>


    </LinearLayout>
    <Button
        android:id="@+id/showRates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="showAllRates"
        android:text="@string/show_rates_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp" />
</RelativeLayout>